# handwritten-digits-recognition-wasm

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: deploy.yml
src/: lib.rs  main.rs  utils.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: main.ts  style.css
